--- a/shard.yml
+++ b/shard.yml
@@ -19,12 +19,9 @@ dependencies:
   pg:
     github: will/crystal-pg
 
-  # multi_auth:
-  #   github: msa7/multi_auth
-
   multi_auth:
-    github: veelenga/multi_auth
-    branch: feature/crystal-ann
+    github: msa7/multi_auth
+    branch: master
 
   micrate:
     github: juanedi/micrate
