--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 env:
   AMBER_ENV=test
+  MICRATE_RUN_UP=true
   DATABASE_NAME=crystal_ann_test
   DATABASE_URL=postgres://postgres@localhost/$DATABASE_NAME
 
@@ -7,4 +8,3 @@ language: crystal
 services: postgresql
 before_script:
   - psql -c "create database $DATABASE_NAME;" -U postgres
-  - crystal run db/migrate.cr
