--- a/shard.yml
+++ b/shard.yml
@@ -36,3 +36,7 @@ dependencies:
   hashids:
     github: splattael/hashids.cr
     version: 0.2.1
+
+development_dependencies:
+  spec2:
+    github: waterlink/spec2.cr
