--- a/shard.yml
+++ b/shard.yml
@@ -38,6 +38,10 @@ dependencies:
     github: splattael/hashids.cr
     version: 0.2.1
 
+  autolink:
+    github: hugoabonizio/autolink.cr
+    version: 0.1.1
+
 development_dependencies:
   spec2:
     github: waterlink/spec2.cr
