--- a/shard.yml
+++ b/shard.yml
@@ -33,13 +33,13 @@ dependencies:
     branch: master
 
   twitter:
-    github: veelenga/twitter.cr
+    github: crystal-announcements/twitter.cr
 
   hashids:
     github: splattael/hashids.cr
 
   autolink:
-    github: hugoabonizio/autolink.cr
+    github: crystal-announcements/autolink.cr
     version: 0.1.3
 
 development_dependencies:
