--- a/shard.yml
+++ b/shard.yml
@@ -16,7 +16,7 @@ dependencies:
 
   granite_orm:
     github: kemalyst/granite-orm
-    version: ~> 0.6.4
+    version: 0.7.2
  
   pg:
     github: will/crystal-pg
