Amber-Crystal -> amberframework

--- a/shard.yml
+++ b/shard.yml
@@ -11,7 +11,7 @@ license: MIT
 
 dependencies:
   amber:
-    github: Amber-Crystal/amber
+    github: amberframework/amber
     version: 0.2.6
 
   granite_orm:
