--- a/shard.yml
+++ b/shard.yml
@@ -11,8 +11,8 @@ license: MIT
 
 dependencies:
   amber:
-    github: Amber-Crystal/amber
-    version: 0.1.6
+    github: amberframework/amber
+    version: 0.2.6
 
   granite_orm:
     github: kemalyst/granite-orm
