--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,34 +2,34 @@
   "name": "Crystal Announcements",
   "short_name": "Crystal ANN",
   "display": "standalone",
-  "start_url": "./",
+  "start_url": "/?utm_source=homescreen",
   "background_color": "#F1F1F1",
   "theme_color": "#FFFFFF",
   "orientation": "portrait",
   "description": "Announce new project, blog post, version update or any other Crystal work",
   "icons": [{
-      "src": "public/launcher-icon/launcher-icon-1x.png",
+      "src": "/launcher-icon/launcher-icon-1x.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "public/launcher-icon/launcher-icon-2x.png",
+      "src": "/launcher-icon/launcher-icon-2x.png",
       "sizes": "72x72",
       "type": "image/png"
     }, {
-      "src": "public/launcher-icon/launcher-icon-3x.png",
+      "src": "/launcher-icon/launcher-icon-3x.png",
       "sizes": "80x80",
       "type": "image/png"
     }, {
-      "src": "public/launcher-icon/launcher-icon-4x.png",
+      "src": "/launcher-icon/launcher-icon-4x.png",
       "sizes": "96x96",
       "type": "image/png"
     }, {
-      "src": "public/launcher-icon/launcher-icon-5x.png",
+      "src": "/launcher-icon/launcher-icon-5x.png",
       "sizes": "144x144",
       "type": "image/png"
     }, {
-      "src": "public/launcher-icon/launcher-icon-6x.png",
+      "src": "/launcher-icon/launcher-icon-6x.png",
       "sizes": "192x192",
       "type": "image/png"
     }
