--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,8 @@ services:
       - TWITTER_OAUTH_CONSUMER_SECRET=
 
     depends_on:
-      - db
-    links:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - 3000:3008
 
@@ -38,9 +37,9 @@ services:
       - crystal_ann-db:/var/lib/postgres/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 30s
+      interval: 10s
       timeout: 10s
-      start_period: 30s
+      start_period: 10s
 
 volumes:
   crystal_ann-db:
